Thu Feb 25 19:11:07 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * include/makeinclude/platform_sunos5_sunc++.GNU:
        * include/makeinclude/wrapper_macros.GNU:
          Refined use of CPPFLAGS; -library will now only be applied to CC
          invocations.

Thu Feb 25 16:52:20 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Strategies_T.cpp:
        * ace/Connector.cpp:
        * ace/Svc_Handler.cpp:
        * tests/run_test.lst:
        * tests/Bug_2609_Regression_Test.cpp:
        * tests/NonBlocking_Conn_Test.h:
        * tests/Bug_2610_Regression_Test.cpp:
        * tests/Process_Strategy_Test.cpp:
        * tests/NonBlocking_Conn_Test.cpp:
          Reverted all the changes done in attempt to fix non-blocking
          connect test and tests for 2609/2610.

Thu Feb 25 08:10:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-opensd.h:
          #define ACE_LACKS_CEILL & ACE_LACKS_FLOORL

Thu Feb 25 08:10:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-netbsd.h:
          #define ACE_LACKS_CEILL & ACE_LACKS_FLOORL

Thu Feb 25 07:51:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-WinCE.h:
          #define ACE_LACKS_CEILL & ACE_LACKS_FLOORL

Thu Feb 25 07:38:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/svcconf.mpb:
        * ace/svcconfgen.mpc:
          Moved regeneration support to its own file that is disabled by
          defeault. Thanks to Joseph Sarbak <Joseph dot Sarbak at rbccm dot com>
          for reporting this.

        * bin/MakeProjectCreator/config/global.features:
          Set ace_svcconf_gen to 0, when this is set to 1 we enable svcconf
          regeneration

Wed Feb 24 22:07:30 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * include/makeinclude/platform_sunos5_sunc++.GNU:
          Added support for alternate CC libraries.
