@@ -1,3 +1,9 @@
+Thu Feb 25 20:33:27 UTC 2010  Steve Huston  <shuston@riverace.com>
+
+        * tests/Bug_2609_Regression_Test.cpp: Correct to use documented ACE
+          conventions for event handler reference counting. Should resolve
+          concerns around Bugzilla 2609.
+
 Thu Feb 25 19:11:07 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * include/makeinclude/platform_sunos5_sunc++.GNU:
